<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <Button
        android:id="@+id/btn_cameraX"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="18dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/et_textBox"
        app:layout_constraintStart_toStartOf="@+id/previewImageView" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="76dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cameraX"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintStart_toEndOf="@+id/btn_cameraX" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cameraX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/image_preview" />

    <EditText
        android:id="@+id/et_textBox"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginBottom="70dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="start"
        android:hint="@string/enter_your_story"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="#454040"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submitStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submitStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_textBox"
        app:layout_constraintStart_toStartOf="@+id/et_textBox" />

    <ProgressBar
        android:id="@+id/progressBarUpload"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_textBox" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nulls"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submitStory"
        app:layout_constraintEnd_toEndOf="@+id/tv_locationLabel"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/tv_locationLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_locationLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>