<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/story_app_logo"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/story_app_logo" />

    <EditText
        android:id="@+id/et_nameRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/enter_your_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <com.dicoding.storyapp.ui.EmailEditText
        android:id="@+id/et_emailRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_nameRegister"
        app:layout_constraintStart_toStartOf="@+id/et_nameRegister"
        app:layout_constraintTop_toBottomOf="@+id/et_nameRegister" />

    <com.dicoding.storyapp.ui.PasswordEditText
        android:id="@+id/et_passwordRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_emailRegister"
        app:layout_constraintStart_toStartOf="@+id/et_emailRegister"
        app:layout_constraintTop_toBottomOf="@+id/et_emailRegister" />

    <Button
        android:id="@+id/btn_registerSubmit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#009688"
        android:contentDescription="@string/register"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/et_passwordRegister"
        app:layout_constraintStart_toStartOf="@+id/et_passwordRegister"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordRegister" />

    <Button
        android:id="@+id/btn_backToLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#026C62"
        android:contentDescription="@string/back_to_login"
        android:text="@string/back_to_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_registerSubmit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_registerSubmit"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registerSubmit" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/localizationRegister"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_localization_black" />

</androidx.constraintlayout.widget.ConstraintLayout>